--- a/PeekXExt/PeekXExt.entitlements
+++ b/PeekXExt/PeekXExt.entitlements
@@ -4,12 +4,9 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
-	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.altic.PeekX</string>
-	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
 	<true/>
 </dict>
 </plist>
-
